Fixed image tags

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 					<div class="row">
 						<div class="col-sm-4 feature">
 							<a href="http://www.bookabach.co.nz/baches-and-holiday-homes/search/locale/mt-maunganui">
-								<img alt="Hotel" src="img/boxhouse.jpg">
+								<img alt="Hotel" src="img/Boxhouse.jpg">
 							</a>
 							<h6><a href="http://www.bookabach.co.nz/baches-and-holiday-homes/search/locale/mt-maunganui">Book A Batch</a></h6>
 							</p>
@@ -142,7 +142,7 @@
 					
 						<div class="col-sm-4 feature">
 							<a href="http://summitmotorlodge.co.nz/home">
-								<img alt="Hotel" src="img/pool.jpg">
+								<img alt="Hotel" src="img/Pool.jpg">
 							</a>
 							<h6><a href="http://summitmotorlodge.co.nz/home">Summit Motor Lodge</a></h6>
 						</div>
