--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 					
 						<div class="col-sm-4 feature">
 							<a href="http://www.silverbirch.co.nz/welcome">
-								<img alt="Hotel" src="img/homes.jpg">
+								<img alt="Hotel" src="img/Homes.jpg">
 							</a>
 							<h6><a href="http://www.silverbirch.co.nz/welcome">Silver Birch Holiday Park</a></h6>
 
